<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_color_rounded"
        android:orientation="horizontal"
        android:paddingLeft="6dp"
        android:paddingTop="8dp"
        android:paddingRight="10dp"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="110dp"
            android:layout_height="120dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imagenRecursos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/casa" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lblTItuloSingleRecurso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titulo_recurso"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/lblIdSingleRecurso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/id_recurso"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/lblTipoSingleRecurso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tipo_recurso"
                android:textSize="20sp" />





        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>